--- a/exercises/module-1/css-grid-practice-assignment-2/index.css
+++ b/exercises/module-1/css-grid-practice-assignment-2/index.css
@@ -1,14 +1,10 @@
 html, body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+   background-color: lightgoldenrodyellow;
 }
 
 #grid-container {
     display: grid;
     grid-gap: 5px;
-    grid-template-columns: repeat(4, 1fr);
-    grid-row: repeat(4, 1fr);
 }
 
 #grid-container > div {
@@ -18,30 +14,42 @@ html, body {
     align-items: center;
     color: white;
     font-size: 25px;
+    padding: 25px;
 }
 
 #box1 {
     background-color: red;
-    grid-column: 1/5;
+    grid-column: 1/3;
     height: 30px;
+    border-radius: 8px 8px 8px 8px;
 }
 
 #box2 {
     background-color: blue;
-    grid-column: 1/3;
-    grid-row: 2/5;
+    grid-column: 3/5;
     height: 30px;
+    border-radius: 8px 8px 8px 8px;
 }
 
 #box3 {
     background-color: green;
-    grid-column: 3/5
+    grid-column: 1/2;
+    grid-row: 2/5;
+    height: 30px;
+    border-radius: 8px 8px 8px 8px;
 }
 
 #box4 {
     background-color: purple;
+    grid-column: 2/5;
+    height: 30px;
+    border-radius: 8px 8px 8px 8px;
 }
 
 #box5 {
-    background-color: purple;
+    background-color: rgb(255, 247, 0);
+    grid-column: 1/5;
+    height: 30px;
+    border-radius: 8px 8px 8px 8px;
 }
+
