--- a/exercises/module-2/css-penguin/cp.css
+++ b/exercises/module-2/css-penguin/cp.css
@@ -1,6 +1,12 @@
+.penguin-top:hover {
+  background-color: rgb(227, 128, 128);
+  width: 55%;
+}
 
-
-
+.penguin-bottom:hover {
+  background-color: rgb(255, 154, 154);
+  width: 55%;
+}
 
 
 .penguin {
@@ -17,6 +23,8 @@
     margin-top: 5%;
     width: 300px;
     height: 300px;
+    
+
   }
 
   .penguin-top {
@@ -26,15 +34,25 @@
     width: 50%;
     height: 45%;
     border-radius: 70% 70% 60% 60%;
+    /* transition-property: background-color;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+    transition-delay: 1s; */
+    transition:  background-color 1s linear 1s, width 1s;
   }
 
   .penguin-bottom {
     top: 40%;
     left: 23.5%;
     background: var(--penguin-skin, grey);
-    width: 53%;
+    width: 50%;
     height: 45%;
     border-radius: 70% 70% 100% 100%;
+    /* transition-property: background-color;
+    transition-duration: 1s;
+    transition-timing-function: ease;
+    transition-delay: 1s; */
+    transition: background-color 1s linear 1s, width 1s;
   }
 
   .right-hand {
