--- a/exercises/module-1/business-time/styles.css
+++ b/exercises/module-1/business-time/styles.css
@@ -14,6 +14,13 @@
   border-radius: 1px;
   }
 
+  header {
+    border: 2px solid;
+    position: fixed;
+    width: 100%;
+    z-index: 10;
+  }
+
   input {
     display: flex;
     margin-left: auto;
@@ -48,16 +55,9 @@
 
   .nav{
     display: flex;
-    position: relative;
-    text-align: justify;
-    margin-left: auto;
-    margin-right: auto;
-    width: 245px;
-    border: 1px solid #ccc;
-    border-radius: 5%;
-    margin: 10px 5px;
-    padding: 5px;
-}
+    justify-content: space-around;
+    align-items: center;
+  }
 
   img {
     display: flex;
